INPUT_MULTIPLE_FIELDS_UI: should not dispatch 'input' events if the element value is not updated https://bugs.webkit.org/show_bug.cgi?id=107429

Reviewed by Kentaro Hara.

Source/WebCore:

http://www.whatwg.org/specs/web-apps/current-work/multipage/common-input-element-attributes.html#common-event-behaviors
> any time the user causes the element's value to change, the user agent
> must queue a task to fire a simple event that bubbles named input at the
> input element.

Tests:
fast/forms/time-multiple-fields/time-multiple-fields-keyboard-event.html
is updated to cover this change.

* html/BaseMultipleFieldsDateAndTimeInputType.cpp:
(WebCore::BaseMultipleFieldsDateAndTimeInputType::editControlValueChanged):
If the new value is equivalent to the old value, don't dispatch events.
However we should recalculate validity and call notifyFormStateChanged
because input.validity.badInput state might be changed.

LayoutTests:

* fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events-expected.txt:
* fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events.html:


Canonical link: https://commits.webkit.org/125677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140324 268f45cc-cd09-0410-ab3c-d52691b4dbfc